--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-metadata-item/sw-media-quickinfo-metadata-item.html.twig
@@ -2,7 +2,7 @@
     <dt>
         {{ getLabel }}:
     </dt>
-    <dd :bind:title="getValue">
+    <dd :title="getValue">
         {{ getValue }}
     </dd>
 </div>
