NTR - move padding to inner containers

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -15,7 +15,6 @@
 .sw-media-catalog {
     .sw-media-catalog__page-content {
         display: grid;
-        padding-left: 10px;
         height: 100%;
         grid-template-columns: 1fr auto;
     }
@@ -40,7 +39,7 @@
 
     .sw-media-catalog__options-container {
         margin-left: auto;
-        padding: 10px;
+        padding: 10px 10px 10px 20px ;
 
         .sw-field {
             display: inline-grid;
@@ -67,6 +66,10 @@
                 }
             }
         }
+    }
+
+    .sw-media-catalog__media-grid {
+        padding-left: 10px;
     }
 
     .sw-media-catalog__change {
