--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -32,6 +32,7 @@
     }
 
     .sw-media-preview__item {
+        padding: 10px;
         max-width: 100%;
         max-height: 100%;
         position: absolute;
