--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -3,8 +3,8 @@
 
         {% block sw_order_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-order.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-order.general.mainMenuItemGeneral')"
+                <sw-search-bar :placeholder="$tc('sw-product.general.placeholderSearchBar')"
+                               :searchType="$tc('sw-product.general.mainMenuItemGeneral')"
                                @search="this.onSearch">
                 </sw-search-bar>
             </template>
