--- a/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.html.twig
+++ b/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.html.twig
@@ -2,14 +2,14 @@
     <div class="sw-context-button" @click="openMenu" ref="swContextButton">
         {% block sw_context_button_button %}
             <slot name="button">
-                <button class="sw-context-button__button" :class="{ 'is--active': showMenu }">
+                <button class="sw-context-button__button" :class="contextButtonClass">
                     <sw-icon name="default-action-more-horizontal" decorative></sw-icon>
                 </button>
             </slot>
         {% endblock %}
 
         {% block sw_context_button_menu %}
-            <sw-context-menu :style="menuStyles" ref="swContextMenu">
+            <sw-context-menu :class="contextMenuClass" :style="menuStyles" ref="swContextMenu">
                 <slot>{% block sw_context_button_menu_slot_default %}{% endblock %}</slot>
             </sw-context-menu>
         {% endblock %}
