--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -10,6 +10,8 @@
 
     .sw-media-grid__content {
         display: grid;
+        grid-column-gap: 15px;
+        grid-row-gap: 10px;
     }
 
     .sw-media-grid__content-cell:hover {
