NTR - fix duplicated scrollbar in media grid in Quickinfo for multiple

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
@@ -36,4 +36,8 @@
         color: @sw-media-quickinfo-multiple-color-highlighted;
         margin-right: 20px;
     }
+
+    .sw-media-grid {
+        overflow-y: hidden;
+    }
 }
