--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -14,7 +14,7 @@
                     {% endblock %}
 
                     {% block sw_sales_channel_detail_base_general_input_active %}
-                        <sw-field type="checkbox"
+                        <sw-field type="boolean"
                                   :label="$tc('sw-sales-channel.detail.labelInputActive')"
                                   v-model="salesChannel.active">
                         </sw-field>
