--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -39,7 +39,7 @@
                                 </sw-field>
                             {% endblock %}
 
-                            <sw-field type="checkbox"
+                            <sw-field type="boolean"
                                       :label="$tc('sw-settings-country.detail.labelActive')"
                                       v-model="country.active">
                             </sw-field>
