--- a/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
+++ b/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
@@ -46,8 +46,7 @@
 
                                                     {% block sw_integration_list_detail_modal_inner_field_writeaccess %}
                                                         <sw-field :label="$tc('sw-integration.detail.writeAccessFieldLabel')"
-                                                                  type="checkbox"
-                                                                  value="boolean"
+                                                                  type="boolean"
                                                                   v-model="currentIntegration.writeAccess">
                                                         </sw-field>
                                                     {% endblock %}
