--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -114,21 +114,21 @@
 
             <sw-container grid="1fr 1fr 1fr" gap="0px 30px" align="center">
                 {% block sw_product_settings_form_active_field %}
-                    <sw-field type="checkbox"
+                    <sw-field type="boolean"
                               :label="$tc('sw-product.settingsForm.labelActive')"
                               v-model="product.active">
                     </sw-field>
                 {% endblock %}
 
                 {% block sw_product_settings_form_shipping_free_field %}
-                    <sw-field type="checkbox"
+                    <sw-field type="boolean"
                               :label="$tc('sw-product.settingsForm.labelShippingFree')"
                               v-model="product.shippingFree">
                     </sw-field>
                 {% endblock %}
 
                 {% block sw_product_settings_form_mark_as_topseller_field %}
-                    <sw-field type="checkbox"
+                    <sw-field type="boolean"
                               :label="$tc('sw-product.settingsForm.labelMarkAsTopseller')"
                               v-model="product.markAsTopseller">
                     </sw-field>
