--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -11,10 +11,11 @@
 
     .sw-media-quickinfo__collapse {
         margin: 0 -25px;
+        padding-bottom: 25px;
     }
 
     .sw-media-quickinfo__collapse-content {
-        padding: 25px;
+        padding: 25px 25px 0 25px;
     }
 
     .sw-media-quickinfo__two-columns {
