--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -10,6 +10,7 @@
 @sw-media-grid-item-color-border:            @color-steam-cloud;
 @sw-media-grid-item-color-text-inline-input: @color-gutenberg;
 @sw-media-grid-item-color-details:           @color-gutenberg;
+@sw-media-grid-color-white:                  @color-white;
 
 .sw-media-grid-item {
     padding: 10px;
@@ -29,7 +30,7 @@
             height: 18px;
             padding: 0 4px;
             line-height: 16px;
-            background: #fff;
+            background: @sw-media-grid-color-white;
             border: 1px solid @sw-media-grid-item-color-border;
             border-radius: @sw-media-grid-item-border-radius;
 
