--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -36,11 +36,11 @@
                             {% endblock %}
 
                             {% block sw_media_quickinfo_quickactions_delete %}
-                                <li class="sw-media-quickinfo__quickaction"
+                                <li class="sw-media-quickinfo__quickaction is--danger"
                                      @click="emitQuickAction($event, 'remove-item')">
                                     <sw-icon small
                                              name="default-action-trash"
-                                             class="sw-media-quickinfo__quickactions-icon">
+                                             class="sw-media-quickinfo__quickactions-icon is--danger">
                                     </sw-icon>
                                     {{ $tc('sw-media.sidebar.quickinfo.delete') }}
                                 </li>
