--- a/Resources/administration/src/module/sw-media/component/sw-media-upload/sw-media-upload.less
+++ b/Resources/administration/src/module/sw-media/component/sw-media-upload/sw-media-upload.less
@@ -2,4 +2,13 @@
     .sw-media-upload__file-input {
         display: none;
     }
+
+    .sw-media-upload__context-button {
+        padding-right: 10px;
+
+        .sw-icon {
+            position: relative;
+            top: 1px;
+        }
+    }
 }
