--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -93,6 +93,11 @@
         .truncate();
         text-align: left;
         color: @sw-media-catalog-color-text-button;
+
+        .sw-icon {
+            position: relative;
+            top: -3px;
+        }
     }
 
     .sw-media-catalog__button {
