--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
@@ -2,6 +2,7 @@
 @import "~less/mixins";
 
 @sw-media-quickinfo-multiple-color-highlighted: @color-shopware-blue;
+@sw-media-quickinfo-multiple-color-danger:      @color-crimson;
 
 .sw-media-quickinfo-multiple {
 
@@ -29,12 +30,22 @@
 
         &:hover {
             color: @sw-media-quickinfo-multiple-color-highlighted;
+
+            &.is--danger {
+                color: @sw-media-quickinfo-multiple-color-danger;
+            }
         }
     }
 
     .sw-media-quickinfo-multiple__quickactions-icon {
+        position: relative;
+        top: -2px;
         color: @sw-media-quickinfo-multiple-color-highlighted;
         margin-right: 20px;
+
+        &.is--danger {
+            color: @sw-media-quickinfo-multiple-color-danger;
+        }
     }
 
     .sw-media-grid {
